# translator-app

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  Translator.spec  db_schema_output.json  main.py  pyproject.toml  translator.py  translator_custom_map.json  translator_exclusions.txt  translator_settings.json
assets/: version.txt
data/: db_schema_output.sample.json
docs/: BUILD.md  KEYBOARD_SHORTCUTS.md  USER_GUIDE.md
scripts/: build.bat  build.ps1
tests/: conftest.py  test_autocomplete.py  test_designdoc.py  test_designdoc_extras.py  test_dialog_helpers.py  test_logsql.py  test_schema.py  test_startup.py  test_translate.py
translator_app/: config.py  designdoc.py  logsql.py  paths.py  schema.py  themes.py  translate.py
translator_app/ui/: app.py  autocomplete.py  keybindings.py  persistence.py  widgets.py
translator_app/ui/dialogs/: command_palette.py  exclusions.py  filter.py  help.py  inconsistency.py  inspect.py  log_sql.py  placement.py  schema_browser.py  sections.py  snippets.py  user_map.py
